# toolbox

./: CMakeLists.txt
src/toolbox/containers/: query.hpp  remove.hpp
src/toolbox/memory/: chopping.hpp  endianness.hpp
src/toolbox/string/: query.hpp  remove.hpp  transform.hpp
unit_tests/: container_tests.cpp  memory_tests.cpp  string_tests.cpp  tests_main.cpp
